Fix: AIF Report text overlapping (#8324)
* Fix: AIF Report text overlapping

* Fix lint

--- a/phytoplankton-console/src/pages/alert-item/components/Header/AiForensicsPdfDownloadButton/index.module.less
+++ b/phytoplankton-console/src/pages/alert-item/components/Header/AiForensicsPdfDownloadButton/index.module.less
@@ -13,7 +13,7 @@
 .pdfPage {
   margin-bottom: 40px;
   background-color: white;
-  padding: 80px 20px 20px 20px;
+  padding: 90px 20px 20px 20px;
   min-height: 800px;
 }
 
